<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/neonGreen"
            android:textSize="20pt" />

        <LinearLayout
            android:id="@+id/play_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/darkGray"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_btn_text"
                android:textColor="@color/green"
                android:textSize="11pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/how_to_play_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/darkGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_btn_text"
                android:textColor="@color/green"
                android:textSize="11pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/about_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/darkGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_btn_text"
                android:textColor="@color/green"
                android:textSize="11pt"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>