<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SortRolesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/before_you_play_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="200dp">
            <TextView
                android:id="@+id/description"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description_place_holder"
                android:textColor="@color/green"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:id="@+id/play_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@color/darkGray">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_btn_text"
                    android:textColor="@color/green"
                    android:textSize="11pt"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_role_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_name_place_holder"
                    android:textSize="20pt"
                    android:textColor="@color/neonGreen"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16pt"
                    android:textColor="@color/neonGreen"
                    android:text="@string/your_role_is"/>
                <TextView
                    android:id="@+id/character_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16pt"
                    android:textColor="@color/neonGreen"
                    android:text="@string/character_role_place_holder"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_play_role"
                    android:textColor="@color/neonGreen"
                    android:textSize="12pt"/>
                <TextView
                    android:id="@+id/character_role_description"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/description_place_holder"
                    android:textColor="@color/green"
                    android:textSize="8pt" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>